test/performance/assets/lb_svc_local.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-service-local
spec:
  selector:
    app-1: scale-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: port1
