test/performance/assets/np-4-egress-clientPod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"np-4","namespace":"demox-1-ybxoeh"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"TCP"},{"port":53,"protocol":"UDP"}]},{"to":[{"ipBlock":{"cidr":"10.172.51.93/32"}}]}],"podSelector":{"matchLabels":{"app":"testpod"}},"policyTypes":["Egress"]}}
  creationTimestamp: "2021-08-27T10:13:45Z"
  generation: 1
  name: np-4
  namespace: demox-1-ybxoeh
  resourceVersion: "38191087"
  selfLink: /apis/networking.k8s.io/v1/namespaces/demox-1-ybxoeh/networkpolicies/np-4
  uid: 19f46d64-ccc5-4439-863b-631a6a6bc378
spec:
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 10.172.51.93/32
  podSelector:
    matchLabels:
      app: testpod
  policyTypes:
    - Egress
