test/performance/assets/np-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2022-07-06T11:18:38Z"
  generation: 1
  labels:
    antrea-scale-test-netpol: ""
  name: 0f61fa0f-a1a1-4171-834b-2225a5695933
  namespace: antrea-scale-ns-5c4b48-0
  resourceVersion: "135364"
  uid: 2af6bb04-4197-4d77-98c3-c64da84234ef
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: antrea-scale-test-pod-c38163ea-ed3a-4a48-8a8a-dc4c9b558884
      ports:
        - port: 80
          protocol: TCP
  podSelector:
    matchLabels:
      B: ""
      C: ""
      D: ""
      G: ""
      I: ""
      R: ""
      U: ""
      V: ""
      W: ""
      X: ""
  policyTypes:
    - Ingress
