test/performance/assets/tmp.json
{
  "kind":"Namespace",
  "apiVersion":"v1",
  "metadata":{
    "name":"antrea-scale-test-ns"
  },
  "spec":{
    "finalizers":[

    ]
  }
}
